# ai-course-2024-1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
intro-to-llm/: hello-gemini-stream.py  hello-gemini-with-openai.py  hello-gpt-stream.py  hello-gpt.py  prompt-injection-with-defence.py  prompt-injection.py
intro-to-rag/basic/: about_me.txt  rag-practice.py  rag-with-memory.py  rag.py
intro-to-rag/bikefest-data/: data-cleaning.py  output-1-clean.json  output-1.json
